deploy/eventmanager/k8s.yaml
---
# Source: eventmanager/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventmanager
  labels:
    helm.sh/chart: eventmanager-0.1.0
    app.kubernetes.io/name: eventmanager
    app.kubernetes.io/instance: eventmanager
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: eventmanager
    app.kubernetes.io/instance: eventmanager
---
# Source: eventmanager/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventmanager
  labels:
    helm.sh/chart: eventmanager-0.1.0
    app.kubernetes.io/name: eventmanager
    app.kubernetes.io/instance: eventmanager
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: eventmanager
      app.kubernetes.io/instance: eventmanager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: eventmanager
        app.kubernetes.io/instance: eventmanager
    spec:
      serviceAccountName: eventmanager
      securityContext:
        {}
      containers:
        - name: eventmanager
          securityContext:
            {}
          image: "eventmanager"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            {}
---
# Source: eventmanager/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: eventmanager
  labels:
    helm.sh/chart: eventmanager-0.1.0
    app.kubernetes.io/name: eventmanager
    app.kubernetes.io/instance: eventmanager
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: "api.auctionbidder.com"
      http:
        paths:
          - path: /v1/events
            backend:
              serviceName: eventmanager
              servicePort: 80
          - path: /v1/events/.*
            backend:
              serviceName: eventmanager
              servicePort: 80
---
# Source: eventmanager/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "eventmanager-test-connection"
  labels:
    helm.sh/chart: eventmanager-0.1.0
    app.kubernetes.io/name: eventmanager
    app.kubernetes.io/instance: eventmanager
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['eventmanager:80/health']
  restartPolicy: Never
